
Phoronix Test Suite (Git)

pts-core: Add PDF bookmarks to result graphs on PDF result file generation
pts-core: Add automated executive summary of result files via executive-summary sub-command and PDF result export
pts-core: Add remove-result-from-result-file sub-command (slightly different from remove-results-from-result-file)
pts-core: Set SaveTestLogs = TRUE by default
pts-core: More verbose reporting of system/external dependency solving status
pts-core: Get the modern result viewer working on Windows

Phoronix Test Suite 9.4.0 Milestone 2
5 February 2020

pts-core: Add config options allowing to modify or delete result files from the result viewer
pts-core: Allow deleting results from the result viewer
pts-core: Allow editing result file information from result viewer
pts-core: Allow deleting results (graphs) from result file in result viewer
pts-core: Add ability to annotate (comment) on result graphs within the result viewer
pts-core: Support converting graphs to PNG/PDF with Inkscape or svg-convert when PHP GD is not installed/enabled
pts-core: Add Persistent Memory disk targets for disk test

Phoronix Test Suite 9.4.0 Milestone 1
13 January 2020

pts-core: Allow test profile test options to expose more helper information strings
pts-core: External dependency updates
pts-core: When a test fails to install due to linker error, try to run that missing library through the external dependency handler to hint at the name
pts-core: When a test fails to install due missing header file, try to run that missing library through the external dependency handler to hint at the name
pts_Graph: Pass/fail graph formatting improvements
phodevi: Convert large RAM capacity basic strings into GB rather than large MB
phodevi: Add support for Linux 5.6+ drivetemp kernel module for ATA drive temperatures

Phoronix Test Suite 9.2.1
11 December 2019

pts-core: Fix for Debian packaging generator